# TinyCc

./: CMakeLists.txt  README.md
TinyCc/: Ast.h  AstAssignment.cpp  AstAssignment.h  AstBinary.cpp  AstBinary.h  AstBlock.cpp  AstBlock.h  AstFunctionCall.cpp  AstFunctionCall.h  AstIdentifier.cpp  AstIdentifier.h  AstIf.cpp  AstIf.h  AstLiteral.cpp  AstLiteral.h  AstReference.cpp  AstReference.h  AstReturn.cpp  AstReturn.h  AstUnary.cpp  AstUnary.h  AstWhile.cpp  AstWhile.h  CMakeLists.txt  Compiler.cpp  Compiler.h  Function.cpp  Function.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Program.cpp  Program.h  Token.cpp  Token.hpp  Utils.cpp  Utils.h  Variable.cpp  Variable.h  (+1 more)
include/: Compiler.h  Function.h  Program.h  Utils.h  Variable.h
include/AST/: Ast.h  AstBinary.h  AstBlock.h  AstFunctionCall.h  AstUnary.h
include/Lexer/: Lexer.h  Token.hpp
include/Parser/: Parser.h
src/: CMakeLists.txt  Compiler.cpp  Function.cpp  Utils.cpp  main.cpp
src/AST/: AstAssignment.cpp  AstBinary.cpp  AstBlock.cpp  AstFunctionCall.cpp  AstIdentifier.cpp  AstIf.cpp  AstLiteral.cpp  AstReference.cpp  AstReturn.cpp  AstUnary.cpp  AstWhile.cpp  CMakeLists.txt
src/Lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp
src/Parser/: CMakeLists.txt  Parser.cpp
